--- a/src/main/webapp/static/app/html/index.html
+++ b/src/main/webapp/static/app/html/index.html
@@ -15,6 +15,7 @@
 		<link href="static/assets/css/bootstrap.css" rel="stylesheet">
 		<script src="static/assets/js/angular.js"></script>
 		<script src="static/assets/js/angular-route.js"></script>
+		<link rel="stylesheet" href="static/app/css/main.css" />
 		<script src="static/app/js/main.js"></script>
 		<script src="static/app/js/main.routes.js"></script>
 		<script src="static/app/js/main.services.js"></script>
